--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.5
   firebase_database: ^10.1.1
   table_calendar: ^3.0.0
+  flutter_charts: ^0.5.1
 
 dev_dependencies:
   flutter_test:
