--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_database: ^10.1.1
   table_calendar: ^3.0.0
   flutter_charts: ^0.5.1
+  intl: ^0.17.0
+  timezone: ^0.7.0
 
 dev_dependencies:
   flutter_test:
