--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.5.3
   provider: ^6.0.5
   firebase_database: ^10.1.1
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
