--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -69,4 +69,6 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.firebase:firebase-messaging:22.0.0'
 }
+apply plugin: 'com.google.gms.google-services'
