--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,11 @@ dependencies:
   firebase_database: ^10.1.1
   table_calendar: ^3.0.0
   flutter_charts: ^0.5.1
-  intl: ^0.17.0
-  timezone: ^0.7.0
+  intl: ^0.18.1
+  timezone: ^0.9.2
+  flutter_local_notifications: ^14.1.1
+  firebase_messaging: ^14.6.2
+  get : ^4.1.4
 
 dev_dependencies:
   flutter_test:
