--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,14 @@ dependencies:
   flutter_charts: ^0.5.1
   intl: ^0.17.0
   timezone: ^0.7.0
-
+  web_socket_channel: ^2.1.0
+  webview_flutter: ^4.2.0
+  video_player: ^2.2.14
+  flutter_mjpeg: ^2.0.3
+  firebase_messaging: ^14.1.0
+  flutter_local_notifications: ^8.1.1+1
+  
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
