--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <application
         android:label="bucket_list_with_firebase2"
         android:name="${applicationName}"
@@ -31,3 +34,4 @@
             android:value="2" />
     </application>
 </manifest>
+
