--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,14 +43,21 @@ dependencies:
   table_calendar: ^3.0.0
   flutter_charts: ^0.5.1
   intl: ^0.17.0
-  timezone: ^0.7.0
+  timezone: ^0.9.2
   web_socket_channel: ^2.1.0
   webview_flutter: ^4.2.0
   video_player: ^2.2.14
   flutter_mjpeg: ^2.0.3
   firebase_messaging: ^14.1.0
+  flutter_local_notifications: ^14.1.1  #추가
+  get: ^4.6.5 # 추가
+  firebase_auth_web: ^5.3.2
+  firebase_core_web: ^2.6.0
   # flutter_local_notifications: ^8.1.1+1
   
+dependency_overrides:
+  # Override for `flutter_local_notifications`:
+  plugin_platform_interface: ^2.1.3
   
 dev_dependencies:
   flutter_test:
