--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+<uses-permission android:name="android.permission.INTERNET" />
     
     <application
         android:label="bucket_list_with_firebase2"
-        android:name="com.example.bucket_list_with_firebase2"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
