--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   get: ^4.6.5 # 추가
   firebase_auth_web: ^5.3.2
   firebase_core_web: ^2.6.0
+  fl_chart: ^0.63.0
   # flutter_local_notifications: ^8.1.1+1
 dev_dependencies:
   flutter_test:
